log
Wed 24 Apr 2024 07:20:49 PM UTC: 
 tests:  0|6
total_score: 0/70
ab9b396
Wed 24 Apr 2024 07:34:32 PM UTC: 
 hashmap.c | 37 +++++++++++++++++++++++++++++++------
 1 file changed, 31 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:19: error: ‘Pair’ has no member named ‘next’
   54 |     while (current->next != NULL)
      |                   ^~
hashmap.c:62:12: error: ‘Pair’ has no member named ‘next’
   62 |     current->next = createPair(key, value);
      |            ^~
Compilation failed
ddc3164
Wed 24 Apr 2024 07:47:33 PM UTC: 
 hashmap.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
 tests:  4|5
total_score: 20/70
d79dd11
Wed 24 Apr 2024 07:54:20 PM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
hashmap.c:88:11: error: redefinition of ‘createMap’
   88 | HashMap * createMap(long capacity)
      |           ^~~~~~~~~
hashmap.c:41:11: note: previous definition of ‘createMap’ with type ‘HashMap *(long int)’ {aka ‘struct HashMap *(long int)’}
   41 | HashMap * createMap(long capacity)
      |           ^~~~~~~~~
Compilation failed
a25e227
Wed 24 Apr 2024 07:55:12 PM UTC: 
 hashmap.c | 18 ++++++------------
 1 file changed, 6 insertions(+), 12 deletions(-)
 tests:  5|4
total_score: 30/70
4fae10d
Wed 24 Apr 2024 07:56:36 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
699e224
Wed 24 Apr 2024 07:58:36 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:79:9: error: ‘aux’ undeclared (first use in this function)
   79 |     if (aux[i] != NULL)
      |         ^~~
hashmap.c:79:9: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:73:11: error: unused variable ‘auxValor’ [-Werror=unused-variable]
   73 |   Pair ** auxValor = map->buckets;
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a82548b
Wed 24 Apr 2024 07:58:58 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|3
total_score: 40/70
59dff1a
Wed 24 Apr 2024 08:03:10 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:79:9: error: ‘auxValor’ undeclared (first use in this function)
   79 |     if (auxValor[i] != NULL)
      |         ^~~~~~~~
hashmap.c:79:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
768def3
Wed 24 Apr 2024 08:03:15 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
9811d5c
Sat 27 Apr 2024 05:23:43 PM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
65b06c2
Sat 27 Apr 2024 05:28:45 PM UTC: 
 hashmap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
 tests:  9|2
total_score: 50/70
e0d9bbc
Sat 27 Apr 2024 05:29:13 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:103:51: error: expected ‘)’ before ‘{’ token
  103 |     if (is_equal(map->buckets[position]->key, key)
      |        ~                                          ^
      |                                                   )
  104 |     {
      |     ~                                              
hashmap.c:110:3: error: expected expression before ‘}’ token
  110 |   }
      |   ^
Compilation failed
7d19745
Sat 27 Apr 2024 05:29:45 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|1
total_score: 60/70
f32a30e
Sat 27 Apr 2024 05:31:44 PM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  13|1
total_score: 60/70
1f29694
Sat 27 Apr 2024 05:32:03 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  13|1
total_score: 60/70
68a48f6
